[gd_scene load_steps=4 format=3 uid="uid://bh4tadm3n73nj"]

[ext_resource type="Script" uid="uid://ch4lgu0v176ub" path="res://src/projects/form/project.gd" id="1_42ebq"]
[ext_resource type="Theme" uid="uid://bp7tyi4g3un7a" path="res://themes/default.tres" id="1_bsph4"]
[ext_resource type="PackedScene" uid="uid://c4ic4dcyaj680" path="res://src/transition/transition.tscn" id="3_n174y"]

[node name="Project" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_bsph4")
script = ExtResource("1_42ebq")

[node name="ProjectsTransition" parent="." instance=ExtResource("3_n174y")]
unique_name_in_owner = true
next_scene_path = "uid://m81f14bhohs3"

[node name="ProjectTransition" parent="." instance=ExtResource("3_n174y")]
unique_name_in_owner = true
next_scene_path = "uid://dbrwdo68ajdq5"

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 2

[node name="Container" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Header" type="MarginContainer" parent="Container"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="BackButton" type="Button" parent="Container/Header"]
layout_mode = 2
size_flags_horizontal = 0
text = "< Back"

[node name="Title" type="Label" parent="Container/Header"]
layout_mode = 2
size_flags_horizontal = 4
text = "New Project"

[node name="ScrollContainer" type="ScrollContainer" parent="Container"]
layout_mode = 2
size_flags_vertical = 3

[node name="Fieldset" type="MarginContainer" parent="Container/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 10

[node name="Form" type="VBoxContainer" parent="Container/ScrollContainer/Fieldset"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NameField" type="HSplitContainer" parent="Container/ScrollContainer/Fieldset/Form"]
layout_mode = 2
split_offset = -100

[node name="Label" type="Label" parent="Container/ScrollContainer/Fieldset/Form/NameField"]
layout_mode = 2
size_flags_horizontal = 3
text = "Name"
horizontal_alignment = 2

[node name="Input" type="LineEdit" parent="Container/ScrollContainer/Fieldset/Form/NameField"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Footer" type="MarginContainer" parent="Container"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 20

[node name="SubmitButton" type="Button" parent="Container/Footer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Submit"

[node name="DeleteButton" type="Button" parent="Container/Footer"]
unique_name_in_owner = true
modulate = Color(0.9821153, 0.42452717, 0.36539218, 1)
layout_mode = 2
size_flags_horizontal = 0
text = "Delete"

[node name="DeleteConfirmationDialog" type="ConfirmationDialog" parent="."]
unique_name_in_owner = true
oversampling_override = 1.0
initial_position = 1
size = Vector2i(200, 106)
dialog_text = "Are you sure?"

[connection signal="pressed" from="Container/Header/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="Container/Footer/SubmitButton" to="." method="_on_submit_button_pressed"]
[connection signal="pressed" from="Container/Footer/DeleteButton" to="." method="_on_delete_button_pressed"]
[connection signal="confirmed" from="DeleteConfirmationDialog" to="." method="_on_delete_confirmation_dialog_confirmed"]
